; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_move.c_cmd_move_workspace.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_move.c_cmd_move_workspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.sway_workspace* }
%struct.sway_workspace = type { i32, i32, i32, i32, %struct.sway_output* }
%struct.sway_output = type { i32 }
%struct.cmd_results = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"move workspace\00", align 1
@EXPECTED_AT_LEAST = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"output\00", align 1
@CMD_INVALID = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [47 x i8] c"Expected 'move workspace to [output] <output>'\00", align 1
@config = common dso_local global %struct.TYPE_4__* null, align 8
@CMD_FAILURE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [21 x i8] c"No workspace to move\00", align 1
@.str.4 = private unnamed_addr constant [43 x i8] c"Can't find output with name/direction '%s'\00", align 1
@CMD_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cmd_results* (i32, i8**)* @cmd_move_workspace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cmd_results* @cmd_move_workspace(i32 %0, i8** %1) #0 {
  %3 = alloca %struct.cmd_results*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.cmd_results*, align 8
  %7 = alloca %struct.sway_workspace*, align 8
  %8 = alloca %struct.sway_output*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.sway_output*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store %struct.cmd_results* null, %struct.cmd_results** %6, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @EXPECTED_AT_LEAST, align 4
  %14 = call %struct.cmd_results* @checkarg(i32 %12, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %13, i32 1)
  store %struct.cmd_results* %14, %struct.cmd_results** %6, align 8
  %15 = icmp ne %struct.cmd_results* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load %struct.cmd_results*, %struct.cmd_results** %6, align 8
  store %struct.cmd_results* %17, %struct.cmd_results** %3, align 8
  br label %90

18:                                               ; preds = %2
  %19 = load i8**, i8*** %5, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 0
  %21 = load i8*, i8** %20, align 8
  %22 = call i64 @strcasecmp(i8* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %18
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, -1
  store i32 %26, i32* %4, align 4
  %27 = load i8**, i8*** %5, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i32 1
  store i8** %28, i8*** %5, align 8
  br label %29

29:                                               ; preds = %24, %18
  %30 = load i32, i32* %4, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %35, label %32

32:                                               ; preds = %29
  %33 = load i32, i32* @CMD_INVALID, align 4
  %34 = call %struct.cmd_results* (i32, i8*, ...) @cmd_results_new(i32 %33, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0))
  store %struct.cmd_results* %34, %struct.cmd_results** %3, align 8
  br label %90

35:                                               ; preds = %29
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** @config, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load %struct.sway_workspace*, %struct.sway_workspace** %38, align 8
  store %struct.sway_workspace* %39, %struct.sway_workspace** %7, align 8
  %40 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %41 = icmp ne %struct.sway_workspace* %40, null
  br i1 %41, label %45, label %42

42:                                               ; preds = %35
  %43 = load i32, i32* @CMD_FAILURE, align 4
  %44 = call %struct.cmd_results* (i32, i8*, ...) @cmd_results_new(i32 %43, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0))
  store %struct.cmd_results* %44, %struct.cmd_results** %3, align 8
  br label %90

45:                                               ; preds = %35
  %46 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %47 = getelementptr inbounds %struct.sway_workspace, %struct.sway_workspace* %46, i32 0, i32 4
  %48 = load %struct.sway_output*, %struct.sway_output** %47, align 8
  store %struct.sway_output* %48, %struct.sway_output** %8, align 8
  %49 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %50 = getelementptr inbounds %struct.sway_workspace, %struct.sway_workspace* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = sdiv i32 %51, 2
  %53 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %54 = getelementptr inbounds %struct.sway_workspace, %struct.sway_workspace* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = add nsw i32 %52, %55
  store i32 %56, i32* %9, align 4
  %57 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %58 = getelementptr inbounds %struct.sway_workspace, %struct.sway_workspace* %57, i32 0, i32 2
  %59 = load i32, i32* %58, align 8
  %60 = sdiv i32 %59, 2
  %61 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %62 = getelementptr inbounds %struct.sway_workspace, %struct.sway_workspace* %61, i32 0, i32 3
  %63 = load i32, i32* %62, align 4
  %64 = add nsw i32 %60, %63
  store i32 %64, i32* %10, align 4
  %65 = load i8**, i8*** %5, align 8
  %66 = getelementptr inbounds i8*, i8** %65, i64 0
  %67 = load i8*, i8** %66, align 8
  %68 = load %struct.sway_output*, %struct.sway_output** %8, align 8
  %69 = load i32, i32* %9, align 4
  %70 = load i32, i32* %10, align 4
  %71 = call %struct.sway_output* @output_in_direction(i8* %67, %struct.sway_output* %68, i32 %69, i32 %70)
  store %struct.sway_output* %71, %struct.sway_output** %11, align 8
  %72 = load %struct.sway_output*, %struct.sway_output** %11, align 8
  %73 = icmp ne %struct.sway_output* %72, null
  br i1 %73, label %80, label %74

74:                                               ; preds = %45
  %75 = load i32, i32* @CMD_FAILURE, align 4
  %76 = load i8**, i8*** %5, align 8
  %77 = getelementptr inbounds i8*, i8** %76, i64 0
  %78 = load i8*, i8** %77, align 8
  %79 = call %struct.cmd_results* (i32, i8*, ...) @cmd_results_new(i32 %75, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.4, i64 0, i64 0), i8* %78)
  store %struct.cmd_results* %79, %struct.cmd_results** %3, align 8
  br label %90

80:                                               ; preds = %45
  %81 = load %struct.sway_workspace*, %struct.sway_workspace** %7, align 8
  %82 = load %struct.sway_output*, %struct.sway_output** %11, align 8
  %83 = call i32 @workspace_move_to_output(%struct.sway_workspace* %81, %struct.sway_output* %82)
  %84 = load %struct.sway_output*, %struct.sway_output** %8, align 8
  %85 = call i32 @arrange_output(%struct.sway_output* %84)
  %86 = load %struct.sway_output*, %struct.sway_output** %11, align 8
  %87 = call i32 @arrange_output(%struct.sway_output* %86)
  %88 = load i32, i32* @CMD_SUCCESS, align 4
  %89 = call %struct.cmd_results* (i32, i8*, ...) @cmd_results_new(i32 %88, i8* null)
  store %struct.cmd_results* %89, %struct.cmd_results** %3, align 8
  br label %90

90:                                               ; preds = %80, %74, %42, %32, %16
  %91 = load %struct.cmd_results*, %struct.cmd_results** %3, align 8
  ret %struct.cmd_results* %91
}

declare dso_local %struct.cmd_results* @checkarg(i32, i8*, i32, i32) #1

declare dso_local i64 @strcasecmp(i8*, i8*) #1

declare dso_local %struct.cmd_results* @cmd_results_new(i32, i8*, ...) #1

declare dso_local %struct.sway_output* @output_in_direction(i8*, %struct.sway_output*, i32, i32) #1

declare dso_local i32 @workspace_move_to_output(%struct.sway_workspace*, %struct.sway_output*) #1

declare dso_local i32 @arrange_output(%struct.sway_output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
